--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,73 @@
     <main>
         <div class="card text-light pb-2">
             <div class="card-body">
+                <h4>Web Rental Store</h4>
+                <div>
+                    <h6 class="d-flex pr-2">Coded With:
+                        <p class="text-info pl-2">HTML, CSS, JS & Bootstrap</p>
+                    </h6>
+                    <h6 class="d-flex pr-2">Programming Age:
+                        <p class="text-info pl-2">4 Months</p>
+                    </h6>
+                </div>
+                <div class="d-flex">
+                    <h6>Link: </h6>
+                    <h6 class="pl-2">
+                        <a class="text-info" href="https://coleanderson7278.github.io/Cole-Anderson-Web-Rental-Agency/">Website Link</a>
+                    </h6>
+                    ,
+                    <h6 class="pl-2">
+                        <a class="text-info" href="https://github.com/ColeAnderson7278/Cole-Anderson-Web-Rental-Agency">Github Link</a>
+                    </h6>
+                </div>
+                <div>
+                    <h6>Description:</h6>
+                    <h6 class="text-info">This was my second quarter final project. The goal of the project was to design a rental website where
+                        a user could rent out at least one item, fill out a form with their appropriate information and then
+                        be shown a thank you message once they were finished renting there item or items. This was one of
+                        my favorite projects due to the fact that I used so many languages in project, and I also got to
+                        show my project to others to see how they liked it, used it, and just how it looked on different
+                        formats.
+                    </h6>
+                </div>
+            </div>
+        </div>
+        <div class="card text-light pb-2">
+            <div class="card-body">
+                <h4>RainFall</h4>
+                <div>
+                    <h6 class="d-flex pr-2">Coded With:
+                        <p class="text-info pl-2">HTML, CSS, JS & Bootstrap</p>
+                    </h6>
+                    <h6 class="d-flex pr-2">Programming Age:
+                        <p class="text-info pl-2">4 Months</p>
+                    </h6>
+                </div>
+                <div class="d-flex">
+                    <h6>Link: </h6>
+                    <h6 class="pl-2">
+                        <a class="text-info" href="https://coleanderson7278.github.io/RainFall/">Website Link</a>
+                    </h6>
+                    ,
+                    <h6 class="pl-2">
+                        <a class="text-info" href="https://github.com/ColeAnderson7278/RainFall">Github Link</a>
+                    </h6>
+                </div>
+                <div>
+                    <h6>Description:</h6>
+                    <h6 class="text-info">This is a simple side scrolling game where you dodge falling rain drops. I made it using basic JavaScript,
+                        HTML, and CSS. It may look simple, but it showed me a lot because I learned about making background
+                        data that virtually is the game. Then, after this data was established, use the data to play the
+                        game using other functions that manipulates the data accordingly. After this I had to us my HTML
+                        and CSS to show this data in a way the user could understand and enjoy. These to aspects taught me
+                        a lot about how the back of my program has to communicate with the front, and then provide something
+                        interesting and useful to the user.
+                    </h6>
+                </div>
+            </div>
+        </div>
+        <div class="card text-light pb-2">
+            <div class="card-body">
                 <h4>Practicing Object-Oriented Design</h4>
                 <div>
                     <h6 class="d-flex pr-2">Coded With:
